# thegent-plugin-host

./: ADR.md  CLAUDE.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  PRD.md  README.md
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/dynamic/: mod.rs
src/adapters/inmemory/: mod.rs
src/adapters/wasm/: mod.rs
src/application/: mod.rs
src/application/commands/: mod.rs
src/application/queries/: mod.rs
src/application/use_cases/: mod.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs
src/domain/events/: mod.rs
src/domain/value_objects/: mod.rs
src/ports/: mod.rs
src/ports/driven/: mod.rs
src/ports/driving/: mod.rs
src/specs/: mod.rs
tests/: integration.rs
